Fix social icons on mobile menu.

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -4,6 +4,7 @@
 
 $green: rgb(44, 180, 160);
 
+@import 'header';
 @import 'main';
 @import 'exchange-widget';
 @import 'wallet-address';
@@ -28,22 +29,6 @@ h3 { font-size: 26px;
 p { font-size: 19px; line-height: 1.5em; }
 img { max-width: 100%; }
 a:hover { text-decoration: none; }
-#header {
-	.navbar-header { padding-bottom: 10px; }
-	.navbar-toggle { top: 15px; }
-	.logo-container { margin-left: 15px;
-		@media (min-width: $screen-sm-min) { margin-left: 0; }
-	}
-	.icon-bar { background: #000; }
-	.navbar-nav { margin-top: 15px;
-		li a:hover { text-decoration: underline; background: none; }
-	}
-	a { color: #333; font-size: 16px;
-		&:hover, , &:visited, &:focus, &:active { text-decoration: none; background: none; outline: none; }
-	}
-	.fa { position: relative; top: -2px; }
-}
-
 
 .modal-title { margin-top: -10px; font-size: 30px; }
 .modal-body {
